app/assets/stylesheets/bul.css.scss
/* style updates for BUL implementation */


/* load 'Source Sans Pro' type family via Google Fonts */
@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic);


body {
	font-family: 'Source Sans Pro', 'Helvetica', 'Arial', sans-serif;
	font-size: 150%;
}


/* adjust top banner styles
   edits also made to: blacklight.css.scss, _header_navbar.html.erb
   additional edits to come to fine-tune responsive breakpoints
*/

#header-navbar {
	margin-top: 1.9em;
	border-top: #c81700 .33em solid;
	border-bottom: .4em solid #eed4aa;
	background-color: #2b0b07;
	height: 5em;
}

.navbar-right {
	margin-top: -.6em;
	margin-bottom: 1.5em;
	margin-left: 0;
	margin-right: 0;
	float: right;
	background-color: #eed4aa;
	width: 100%;
	height: 2.33em;
}

.navbar-nav {
	position: relative;
	margin-left: auto;
	margin-right: auto;
	padding-right: 8.5%;
	float: right;
}

#header-navbar a {
	color: #2b0b07;
	font-weight: bold;
	margin-top: -.75em;
}

div#search-navbar {
	float: right;
	margin-top: -4em;
	margin-right: -2%;
	width: 50%;
}

.navbar-static-top {
	background: none;
	border-bottom: none;
}

.search-btn {
	background-color: #d58100;
	border-color: #d58100;
}

.search-btn:hover {
	background-color: #ad8d89;
	border-color: #ad8d89;
}

.search-query-form {
	margin-top: .25em;
}

.start-over a {
	display: none;
}


/* removes gray background of search pop-up options */
.input-group-addon {
	background: none;
	width: auto;
	border: none;
	margin-right: 0;
	padding-right: 0;
}


/* adjust background tints; adjust misc. padding & margins & positioning per width ranges */


/* adjusts positioning of off-canvas overlay's nav links for mobile widths */
@media (min-width: 0px) and (max-width: 767px) {
	
	#user-util-collapse {
		margin-right: 0;
		margin-left: 0;
		margin-top: 0;
		padding-top: 1em;
	    background-color: #eed4aa;
	    height: 14em;
	    text-align: center;
	}

	.navbar-nav {
		width: 100%;
	}

}

@media (min-width: 0px) {

	div#facets.col-md-3 {
		background-color: #edece7;
	}
	
	div#books.col-md-6, div#summon.col-md-6, div#bento-0.col-md-6, div#bento-1.col-md-6 {
		background-color: #f7f6f2;
		width: 98%;
		margin-left: 2%;
		padding-top: .5em;
		padding-bottom: 1.5em;
	}
	
	div#bdr-search.col-md-6, div#website.col-md-6 {
		background-color: #f7f6f2;
		width: 98%;
		margin-left: 2%;
		padding-top: .5em;
		padding-bottom: 1.5em;
	}
	
	div#jump-links.row {
		margin-top: 0em;
		margin-left: 2%;
	}

	#header-navbar {
		margin-top: 1.9em;
		border-top: #c81700 .33em solid;
		border-bottom: 0em solid #eed4aa;
		background-color: #2b0b07;
		height: 4.6em;
	}

	#header-navbar {
	  border-top: #7f2320 thick solid;
	
	  .navbar-brand {
	    width: 230px;
	    height: 65px;
	    background-image: url('bul/shield_307_87.png');
	    background-color: transparent;
	    background-size: 100%;
	    text-indent: 20%;
	    white-space: nowrap;
	    overflow: visible;
	    padding-right:0;
	    margin-top: -5px;
	    margin-right:0px;
	    margin-left: .5em;
	    padding-left: 2%;
	  }
	}

	div#search-navbar {
		clear: both;
		float: left;
		margin-top: 1em;
		margin-right: 1em;
		margin-left: 1em;
		width: 96%;
	}

	.navbar-toggle {
		margin-top: 13px;
	}

}

@media (min-width: 768px) {

	div#facets.col-md-3 {
		background-color: #edece7;
	}
	
	div#books.col-md-6, div#summon.col-md-6, div#bento-0.col-md-6, div#bento-1.col-md-6 {
		background-color: #f7f6f2;
		width: 98%;
		margin-left: 2%;
		padding-top: .5em;
		padding-bottom: 1.5em;
	}
	
	div#bdr-search.col-md-12 {
		background-color: #f7f6f2;
		width: 98%;
		margin-left: 2%;
		padding-top: .5em;
		padding-bottom: 1.5em;
	}
	
	div#jump-links.row {
		margin-top: 0em;
		margin-left: 2%;
	}
	
	#header-navbar {
		margin-top: 1.9em;
		border-top: #c81700 .33em solid;
		border-bottom: .4em solid #eed4aa;
		background-color: #2b0b07;
		height: 5.1em;
	}
	
	#header-navbar {
	  border-top: #7f2320 thick solid;
	
	  .navbar-brand {  
	    width: 307px;
	    height: 87px;
	    background-image: url('bul/shield_307_87.png');
	    background-color: transparent;
	    text-indent: 20%;
	    white-space: nowrap;
	    overflow: visible;
	    padding-right:0;
	    margin-top: -17px;
	    margin-right:20px;
	    padding-left: 2%;
	  }
	}
	
	div#search-navbar {
		float: right;
		margin-top: -4em;
		margin-right: -2%;
		width: 50%;
	}

}

@media (min-width: 992px) {
	
	div#facets.col-md-3 {
		background-color: #edece7;
	}
	
	div#books.col-md-6, div#summon.col-md-6, div#bento-0.col-md-6, div#bento-1.col-md-6 {
		background-color: #f7f6f2;
		width: 48%;
		margin-left: 2%;
		padding-top: 0;
		padding-bottom: 1.5em;
	}
	
	div#bdr-search.col-md-6, div#website.col-md-6 {
		background-color: #f7f6f2;
		width: 48%;
		margin-left: 2%;
		padding-top: 0;
		padding-bottom: 1.5em;
	}
	
	div#jump-links.row {
		margin-left: 2%;
	}
	
	#header-navbar {
		margin-top: 1.9em;
		border-top: #c81700 .33em solid;
		border-bottom: .4em solid #eed4aa;
		background-color: #2b0b07;
		height: 5.1em;
	}

	#header-navbar {
	  border-top: #7f2320 thick solid;
	
	  .navbar-brand {
	    width: 501px;
	    height: 87px;
	    background-image: url('bul/shield_501_87.png');
	    background-color: transparent;
	    text-indent: 20%;
	    white-space: nowrap;
	    overflow: visible;
	    padding-right:0;
	    margin-top: -17px;
	    margin-right:20px;
	    padding-left: 2%;
	  }
	}
	
	div#search-navbar {
		float: right;
		margin-top: -4em;
		margin-right: -2%;
		width: 50%;
	}
	
}


/* change color of 'online' indicator */

.label-info {
    background-color: #7bab54;
}

.label-info[href]:hover, .label-info[href]:focus {
    background-color: #7bab54;
}

